Tweaks, Room page footer 	- added active viewer count and show queue button to footer 	- added now playing text that updates for each video 	- fixed display error for vote count on mobile site 	- adjusted positioning and sizing of mobile add song form 	- fixed positioning and sizing of the host video display 	- fixed error where first video on page load wouldn't check for unavailability 	- spawnFrame() call moved into the loadApiClient function to avoid calling api functions before the api is loaded

--- a/public/m/msite.css
+++ b/public/m/msite.css
@@ -235,17 +235,20 @@ label {
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  align-items: center;
+  justify-content: center;
 }
 
 #add-form-content {
   background-color: #fefefe;
   margin: 15% auto; /* 15% from the top and centered */
-  margin-top: 500px;
   padding: 20px;
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
+  height: 20%;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   overflow: auto;
 }
 
