--- a/public/site.css
+++ b/public/site.css
@@ -45,6 +45,13 @@ button:focus {
   outline: 0;
 }
 
+#site-content {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin: 0;
+}
+
 #header {
   display: flex;
   justify-content: space-between;
@@ -104,12 +111,50 @@ button:focus {
 }
 
 #ytplayer {
-  width: 80%;
-  height: 72%;
+  position: absolute;
+  top: 128px;
+  width: 76%;
+  height: 76%;
+  z-index: -1;
 }
 
-#paintbrush-button button, #settings-button button {
+#paintbrush-button button, #settings-button button, #queue-button button {
   display: flex;
   align-content: center;
   justify-content: center;
+}
+
+#queue-button button {
+  border: none;
+  height: 45px;
+  width: 45px;
+  margin: 40px;
+}
+
+#footer {
+  display: flex;
+  flex-direction: row;
+}
+
+#viewer-count {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 70px;
+  margin: 12px;
+  margin-left: 35px;
+  font-size: 28px;
+}
+
+#viewer-icon {
+  margin-top: 5px;
+}
+
+#vid-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
